Fixed Newsletter submit button alignment

--- a/softcopy-front-end/src/Components/Footer/Footer.css
+++ b/softcopy-front-end/src/Components/Footer/Footer.css
@@ -87,46 +87,33 @@
     margin-top: 25px;
     position: relative;
   }
-  
-  .newsletter-input-div > input {
-    background: transparent;
-    height: 50px;
-    width: 85%;
-    color: #fff;
-    padding: 6px 20px;
-    border-radius: 0;
+
+  .newsletter-input-div {
+    display: flex;
+    align-items: center;
     border: 1px #fff solid;
   }
-  
+
+  .newsletter-input-div > input {
+    color: #fff!important;
+    background: transparent;
+    border: 0;
+  }
+
+  .newsletter-input-div > button {
+    background: transparent;
+    border: 0;
+    color: #fff;
+    font-size: 21px;
+    padding-right: 15px;
+    outline: none !important;
+  }
+
   .newsletter-input:focus {
     background: transparent !important;
     color: #fff !important;
     outline: 0 !important;
     box-shadow: none !important;
-    border-color: white !important;
-  }
-  
-  .submit-button-div > button {
-    background: transparent;
-    outline: 0;
-    border: 0;
-    color: #fff;
-    position: relative;
-    margin-top: -2px;
-    font-size: 21px;
-    right: -5px;
-    outline: none !important;
-  }
-  
-  .submit-button-div {
-    position: absolute;
-    right: 4%;
-    top: 55%;
-    -webkit-transform: translate(-50%);
-    transform: translateY(-50%);
-    padding: 6px 20px;
-    border-radius: 0;
-    border: 1px #fff solid;
   }
   
   .newsletter-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
